@@ -1,0 +1,90 @@
+<div>
+    <h2>添加模块</h2>
+
+    <form [formGroup]="modelForm" (ngSubmit)="onSubmit()" class="field-form" novalidate>
+
+        <div style="margin-bottom: 1em">
+            <button type="submit" [disabled]="modelForm.pristine" mat-raised-button>Save</button> &nbsp;
+            <button type="reset" (click)="revert()" [disabled]="modelForm.pristine" mat-raised-button>Revert</button>
+        </div>
+        <!-- <p>Model value: {{ model | json }}</p> -->
+        <span>Name: {{modelForm.get('model_standard_name').value|json}}</span>
+        <span *ngIf="!modelForm.get('has_table').value">无记录</span>
+        <span *ngIf="!modelForm.get('has_array').value">无数据表</span>
+        <mat-form-field class="model-half-width">
+            <input formControlName="model_standard_name" matInput placeholder="模块名称">
+        </mat-form-field>
+
+        <hr>
+        <h4>单元</h4>
+
+        <div formArrayName="cells_form">
+            <mat-accordion>
+                <mat-expansion-panel *ngFor="let cell of cells_form.controls; let i=index" [formGroupName]="i" class="model-half-width">
+                    <mat-expansion-panel-header>
+                        <mat-panel-title>
+                            单元 #{{i + 1}}
+                        </mat-panel-title>
+                        <mat-panel-description>
+                            单元内容
+                        </mat-panel-description>
+                    </mat-expansion-panel-header>
+
+                    <mat-form-field>
+                        <input formControlName="name" matInput placeholder="单元名">
+                    </mat-form-field>
+                    <mat-form-field>
+                        <mat-select formControlName="source_name" placeholder="数据来源">
+                            <mat-option *ngFor="let s of source" [value]="s">{{s}}</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                    <mat-form-field>
+                        <input formControlName="value" matInput placeholder="数据值">
+                    </mat-form-field>
+                    <button (click)="removeCell(i)" type="button" mat-raised-button>删除</button>
+                </mat-expansion-panel>
+
+                <!-- <mat-expansion-panel (opened)="panelOpenState = true"
+                                    (closed)="panelOpenState = false">
+                <mat-expansion-panel-header>
+                  <mat-panel-title>
+                    Self aware panel
+                  </mat-panel-title>
+                  <mat-panel-description>
+                    Currently I am {{panelOpenState ? 'open' : 'closed'}}
+                  </mat-panel-description>
+                </mat-expansion-panel-header>
+                <p>I'm visible because I am open</p>
+              </mat-expansion-panel> -->
+
+            </mat-accordion>
+            <!-- <p>行号{{row}}</p> -->
+            <button (click)="addCell()" type="button" mat-raised-button>添加记录</button>
+        </div>
+        <!-- <hr> -->
+        <!-- <h4>数组</h4> -->
+        <!-- <div formArrayName="arrays_form">
+            <div *ngFor="let table of arrays_form.controls; let i=index" [formGroupName]="i">
+              <h4>列 #{{i + 1}}</h4>
+              <button (click)="removeArray(i)" type="button" mat-raised-button>删除</button>
+              <div style="margin-left: 1em;">
+                <mat-form-field class="model-quarter-width">
+                  <input formControlName="name" matInput placeholder="记录名">
+                </mat-form-field>
+                <mat-form-field class="model-quarter-width">
+                  <mat-select formControlName="source" placeholder="数据来源">
+                    <mat-option *ngFor="let s of source" [value]="s">{{s}}</mat-option>
+                  </mat-select>
+                </mat-form-field>
+                <mat-form-field class="model-quarter-width">
+                  <input formControlName="value" matInput placeholder="数据值">
+                </mat-form-field>
+              </div>
+            </div>
+            <button (click)="addArray(1,1)" type="button" mat-raised-button>添加记录</button>
+          </div> -->
+    </form>
+    <p>Form value: {{ modelForm.value | json }}</p>
+    <!-- <p>Form status: {{ modelForm.status | json }}</p> -->
+    <!-- <p>Name value: {{ modelForm.get('model_name').value }}</p> -->
+</div>
