@@ -3,3 +3,9 @@
 2. add data manage service
 3. change data form
 4. remove several unuseful functions
+
+2018-02-27 (hansien)
+1. add new model preview
+2. delete unuseful code
+2. fix preview display
+4. 
